--- a/index.css
+++ b/index.css
@@ -1,10 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Lobster&display=swap');
+
+h1 {
+    color: #F5F5F5;
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 400%;
+}
 
 #body {
     opacity:0.9;
     background-image: url('assets/background.jpg');
-    background-size: cover;
+    background-size: auto;
+    background-repeat: repeat-y;
     background-position: center;
-    background-repeat: no-repeat;
+    background-blend-mode: darken;
 }
 
 body { text-align: center; padding: 40px; background: #F5F5F5; }
